Fix back button click area being too large + retrieve game in edit game page

--- a/src/app/components/organisms/header/header.component.scss
+++ b/src/app/components/organisms/header/header.component.scss
@@ -10,6 +10,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   flex: 1;
 }
 
