--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   font-family: 'Rubik', sans-serif;
+  background-color: #1c1b22;
 }
 
 a {
